# pybindplayground

./: setup.py
src/: CMakeLists.txt  playground.cpp  playground.h
